0.614
 Fix: Fixed server crashing if PlayerDB.txt exists but is empty.
 Fix: Fixed "/join -" using player names, and "/tp -" using world names.
 Fix: Solved File.Replace-related errors, which caused occasional save failures.
 Fix: Fixed /SpecPatrol not checking caller's Spectate permission limit when selecting the next target.
 Fix: Fixed "random" brush producing obvious repeating patterns.
 Fix: Added permission limit check to /unfreeze (thanks Xb0x4d4m)
 Fix: Improved the way /Bring and /WBring enforce access permissions (thanks Hellenion)
 Change: Added more information about player connects/disconnects to log file.

0.613
 Fix: Fixed ConfigGUI not saving changes to ShowConnectionMessages key.
 Fix: Fixed a case where ServerGUI could crash while attempting to rename a world.
 Fix: All spectate permissions are now re-checked when someone gets promoted or demoted.
 Fix: Fixed ConfigGUI Worlds tab crash when dealing with zoned maps.
 Fix: Fixed IRC bot not retrying for desired nickname after reconnecting
 Fix: Fixed a case where editing a world via ConfigGUI would clear security whitelists/blacklists.
 Fix: Fixed spectating players not being treated as hidden (thanks Hellenion)
 Fix: Fixed formatting in "Player ___ got auto-kicked" message (thanks BobKare)
 Fix: Fixed auto-kick revealing hidden players (thanks BobKare)
 Fix: Fixed RandomBrush-related /undo artifacts in /triangle (thanks Lunara_Noctis)

0.612
 Fix: Fixed "/Worlds @Rank" not autocompleting rank names.
 Fix: Fixed compatibility with legacy PlayerDB format versions. PlayerDB files created by fCraft 0.400+ will work again.
 Fix: Fixed several syntax problems and crashes in /Gen.
 Fix: Fixed a bug that reset a world's BackupInterval to default and IsLocked flag to false after changing the map.
 Fix: Fixed a bug that prevented kicks/bans/promotions/demotions from being announced on IRC if no reason was given.
 Change: Capped all user-entered time spans at 9999 days.